# rodoc-app

./: .gitignore  BUILD.md  LICENSE  README.md
.github/workflows/: main.yml
src/: autobuild.sh  config.ini  deploy.bat  index.md  install_script.nsi  main.cpp  meson.build  rodoc.cbp
src/core/: config.cpp  config.h  date.cpp  date.h  family_tree.cpp  family_tree.h  family_tree_items.cpp  family_tree_items.h  file_parser.cpp  file_parser.h  person.cpp  person.h  strings.h
src/graphics/: add_file.ui  choose_person.ui  date_dialog.ui  dialogs.cpp  dialogs.h  event_dialog.ui  event_templates.ui  export_project.ui  export_templates.ui  graphics_items.cpp  graphics_items.h  help_dialog.ui  html_export.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_slots.cpp  picture_export.ui  relation_dialog.ui  relation_templates.ui  resources.qrc  suggestions.ui  tag_chooser.ui  visual_settings.ui
src/graphics/resources/: icons.md  icons.sh
src/help texts/: events.md  files.md  generic.md  layout.md  persons.md  relations.md
